@@ -53,6 +53,7 @@ CHANGELOG Roundcube Webmail
 - Don't list subscribed but non-existent folders (#1486225)
 - Fix handling of URLs with tilde (~) or semicolon (;) character (#1487087, #1487088)
 - Plugin API: added 'contact_form' hook
+- Add SORT=DISPLAY support (RFC 5957)
 
 RELEASE 0.4.2
 -------------
